<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:text="@string/detail_view_frequency" android:layout_height="wrap_content" android:layout_below="@+id/detailViewLocation" android:layout_alignLeft="@+id/detailViewLocation" android:layout_marginTop="30dp" android:id="@+id/detailViewFrequency"></TextView>
    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:text="@string/detail_view_macAddr" android:layout_height="wrap_content" android:id="@+id/detailViewMacAddress" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:layout_marginLeft="14dp" android:layout_marginTop="17dp"></TextView>
    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:text="@string/detail_view_signal" android:layout_height="wrap_content" android:layout_below="@+id/detailViewFrequency" android:layout_alignLeft="@+id/detailViewFrequency" android:layout_marginTop="32dp" android:id="@+id/detailViewSignal"></TextView>
    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignBaseline="@+id/detailViewFrequency" android:layout_alignBottom="@+id/detailViewFrequency" android:layout_toRightOf="@+id/detailViewFrequency" android:id="@+id/detailViewFrequencyValue" android:text="@string/detail_view_frequency_value"></TextView>
    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/detailViewLocationValue" android:layout_above="@+id/detailViewFrequency" android:layout_toRightOf="@+id/detailViewLocation" android:text="@string/detail_view_location_value"></TextView>
    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignBaseline="@+id/detailViewSignal" android:layout_alignBottom="@+id/detailViewSignal" android:layout_toRightOf="@+id/detailViewSignal" android:id="@+id/detailViewSignalValue" android:text="@string/detail_view_signal_value"></TextView>
    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/detailViewMacAddressValue" android:layout_alignBaseline="@+id/detailViewMacAddress" android:layout_alignBottom="@+id/detailViewMacAddress" android:layout_toRightOf="@+id/detailViewMacAddress" android:text="@string/detail_view_macAddr_value"></TextView>
    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/detailViewCapabilities" android:layout_below="@+id/detailViewSSID" android:layout_alignLeft="@+id/detailViewSSID" android:layout_marginTop="25dp" android:text="@string/detail_view_capabilities"></TextView>
    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/detailViewSSID" android:layout_below="@+id/detailViewMacAddress" android:layout_alignLeft="@+id/detailViewMacAddress" android:layout_marginTop="25dp" android:text="@string/detail_view_ssid"></TextView>
    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignBottom="@+id/detailViewSSID" android:layout_toRightOf="@+id/detailViewSSID" android:text="@string/detail_view_ssid_value" android:id="@+id/detailViewSSIDValue"></TextView>
    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignBaseline="@+id/detailViewCapabilities" android:layout_alignBottom="@+id/detailViewCapabilities" android:layout_toRightOf="@+id/detailViewCapabilities" android:text="@string/detail_view_capabilities_value" android:id="@+id/detailViewCapabilitiesValue"></TextView>
    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:text="@string/detail_view_location" android:layout_height="wrap_content" android:id="@+id/detailViewLocation" android:layout_below="@+id/detailViewCapabilities" android:layout_alignLeft="@+id/detailViewCapabilities" android:layout_marginTop="66dp"></TextView>
    
</RelativeLayout>